tests/rosetta/out/Rust/bitmap-write-a-ppm-file.error
rustc: exit status 1
error: `<` is interpreted as a start of generic arguments for `i32`, not a comparison
  --> /tmp/bitmap-write-a-ppm-file.rs:52:30
   |
52 |         while s.len() as i32 < width {
   |                              ^ ------- interpreted as generic arguments
   |                              |
   |                              not interpreted as comparison
   |
help: try comparing the cast value
   |
52 |         while (s.len() as i32) < width {
   |               +              +

error[E0308]: mismatched types
  --> /tmp/bitmap-write-a-ppm-file.rs:44:50
   |
44 |                 setPixel(&mut b.clone(), xx, yy, &c.clone());
   |                 --------                         ^^^^^^^^^^ expected `Colour`, found `&Colour`
   |                 |
   |                 arguments to this function are incorrect
   |
note: function defined here
  --> /tmp/bitmap-write-a-ppm-file.rs:32:8
   |
32 |     fn setPixel(b: &mut Bitmap, x: i32, y: i32, c: Colour) -> () {
   |        ^^^^^^^^                                 ---------
help: consider removing the borrow
   |
44 -                 setPixel(&mut b.clone(), xx, yy, &c.clone());
44 +                 setPixel(&mut b.clone(), xx, yy, c.clone());
   |

error[E0308]: mismatched types
  --> /tmp/bitmap-write-a-ppm-file.rs:55:16
   |
50 |     fn pad(n: i32, width: i32) -> &'static str {
   |                                   ------------ expected `&'static str` because of return type
...
55 |         return s;
   |                ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
55 |         return &s;
   |                +

error[E0308]: mismatched types
  --> /tmp/bitmap-write-a-ppm-file.rs:92:20
   |
92 |             out += line;
   |                    ^^^^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
92 |             out += &line;
   |                    +

error[E0308]: mismatched types
   --> /tmp/bitmap-write-a-ppm-file.rs:102:16
    |
57  |     fn writePPMP3(b: Bitmap) -> &'static str {
    |                                 ------------ expected `&'static str` because of return type
...
102 |         return out;
    |                ^^^ expected `&str`, found `String`
    |
help: consider borrowing here
    |
102 |         return &out;
    |                +

error[E0308]: mismatched types
   --> /tmp/bitmap-write-a-ppm-file.rs:107:38
    |
107 |         let mut bm = newBitmap(4, 4, &black.clone());
    |                      ---------       ^^^^^^^^^^^^^^ expected `Colour`, found `&Colour`
    |                      |
    |                      arguments to this function are incorrect
    |
note: function defined here
   --> /tmp/bitmap-write-a-ppm-file.rs:17:8
    |
17  |     fn newBitmap(w: i32, h: i32, c: Colour) -> Bitmap {
    |        ^^^^^^^^^                 ---------
help: consider removing the borrow
    |
107 -         let mut bm = newBitmap(4, 4, &black.clone());
107 +         let mut bm = newBitmap(4, 4, black.clone());
    |

error[E0308]: arguments to this function are incorrect
   --> /tmp/bitmap-write-a-ppm-file.rs:108:9
    |
108 |         fillRect(&bm.clone(), 1, 0, 1, 2, &white.clone());
    |         ^^^^^^^^ -----------              -------------- expected `Colour`, found `&Colour`
    |                  |
    |                  expected `Bitmap`, found `&Bitmap`
    |
note: function defined here
   --> /tmp/bitmap-write-a-ppm-file.rs:39:8
    |
39  |     fn fillRect(b: Bitmap, x: i32, y: i32, w: i32, h: i32, c: Colour) -> () {
    |        ^^^^^^^^ ---------                                  ---------
help: consider removing the borrow
    |
108 -         fillRect(&bm.clone(), 1, 0, 1, 2, &white.clone());
108 +         fillRect(bm.clone(), 1, 0, 1, 2, &white.clone());
    |
help: consider removing the borrow
    |
108 -         fillRect(&bm.clone(), 1, 0, 1, 2, &white.clone());
108 +         fillRect(&bm.clone(), 1, 0, 1, 2, white.clone());
    |

error[E0308]: mismatched types
   --> /tmp/bitmap-write-a-ppm-file.rs:109:41
    |
109 |         setPixel(&mut bm.clone(), 3, 3, &Colour { R: 127, G: 0, B: 63 });
    |         --------                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Colour`, found `&Colour`
    |         |
    |         arguments to this function are incorrect
    |
note: function defined here
   --> /tmp/bitmap-write-a-ppm-file.rs:32:8
    |
32  |     fn setPixel(b: &mut Bitmap, x: i32, y: i32, c: Colour) -> () {
    |        ^^^^^^^^                                 ---------
help: consider removing the borrow
    |
109 -         setPixel(&mut bm.clone(), 3, 3, &Colour { R: 127, G: 0, B: 63 });
109 +         setPixel(&mut bm.clone(), 3, 3, Colour { R: 127, G: 0, B: 63 });
    |

error[E0308]: mismatched types
   --> /tmp/bitmap-write-a-ppm-file.rs:110:30
    |
110 |         let ppm = writePPMP3(&bm.clone());
    |                   ---------- ^^^^^^^^^^^ expected `Bitmap`, found `&Bitmap`
    |                   |
    |                   arguments to this function are incorrect
    |
note: function defined here
   --> /tmp/bitmap-write-a-ppm-file.rs:57:8
    |
57  |     fn writePPMP3(b: Bitmap) -> &'static str {
    |        ^^^^^^^^^^ ---------
help: consider removing the borrow
    |
110 -         let ppm = writePPMP3(&bm.clone());
110 +         let ppm = writePPMP3(bm.clone());
    |

error[E0507]: cannot move out of `b.pixels` which is behind a mutable reference
  --> /tmp/bitmap-write-a-ppm-file.rs:33:24
   |
33 |         let mut rows = b.pixels;
   |                        ^^^^^^^^ move occurs because `b.pixels` has type `Vec<Vec<Colour>>`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
33 |         let mut rows = &b.pixels;
   |                        +
help: consider cloning the value if the performance cost is acceptable
   |
33 |         let mut rows = b.pixels.clone();
   |                                ++++++++

error[E0507]: cannot move out of index of `Vec<Vec<Colour>>`
  --> /tmp/bitmap-write-a-ppm-file.rs:34:23
   |
34 |         let mut row = rows[y as usize];
   |                       ^^^^^^^^^^^^^^^^ move occurs because value has type `Vec<Colour>`, which does not implement the `Copy` trait
   |
help: consider borrowing here
   |
34 |         let mut row = &rows[y as usize];
   |                       +
help: consider cloning the value if the performance cost is acceptable
   |
34 |         let mut row = rows[y as usize].clone();
   |                                       ++++++++

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0308, E0507.
For more information about an error, try `rustc --explain E0308`.
